if no login can't use content

--- a/mainpage/templates/index.html
+++ b/mainpage/templates/index.html
@@ -23,15 +23,27 @@
             <div class="row">
                 <!-- Footer Location-->
                 <div class="col-lg-4 mb-5 mb-lg-0">
-                    <h4 class="text-uppercase mb-4"><a class="white_color" href="#">[ 청소당번 ]</a></h4>
+                {% if user.is_authenticated %}
+                    <h4 class="text-uppercase mb-4"><a class="white_color" href="{% url 'index' %}">[ 청소당번 ]</a></h4>
+                {% else %}
+                    <h4 class="text-uppercase mb-4"><a class="white_color" href="{% url 'login' %}">[ 청소당번 ]</a></h4>
+                {% endif %}
                 </div>
                 <!-- Footer Social Icons-->
                 <div class="col-lg-4 mb-5 mb-lg-0">
-                    <h4 class="text-uppercase mb-4"><a class="white_color" href="#">[ 공지사항 ]</a></h4>
+                {% if user.is_authenticated %}
+                    <h4 class="text-uppercase mb-4"><a class="white_color" href="{% url 'index' %}">[ 공지사항 ]</a></h4>
+                {% else %}
+                    <h4 class="text-uppercase mb-4"><a class="white_color" href="{% url 'login' %}">[ 공지사항 ]</a></h4>
+                {% endif %}
                 </div>
                 <!-- Footer About Text-->
                 <div class="col-lg-4">
-                    <h4 class="text-uppercase mb-4"><a class="white_color" href="#">[ 건의사항 ]</a></h4>
+                {% if user.is_authenticated %}
+                    <h4 class="text-uppercase mb-4"><a class="white_color" href="{% url 'index' %}">[ 건의사항 ]</a></h4>
+                {% else %}
+                    <h4 class="text-uppercase mb-4"><a class="white_color" href="{% url 'login' %}">[ 건의사항 ]</a></h4>
+                {% endif %}
                 </div>
             </div>
         </div>
