make notice list view

--- a/mainpage/templates/notice.html
+++ b/mainpage/templates/notice.html
@@ -4,18 +4,26 @@
 {% block content %}
     <div class="container my-3 masthead">
         <h1>공지사항</h1>
-
+        <br>
         <table class="table table-striped table-hover">
         <thead>
             <tr>
                 <th>번호</th><th>제목</th><th>작성자</th><th>작성일</th>
             </tr>
-        </thead>        
+        </thead>                
         <tbody>
-            <tr>
-                <td>1</td><td>hi</td><td>namjin</td><td>2020.2.27</td>
-            </tr>
+        {% if notice_list %}
+        {% for notice in notice_list %}
+                <tr>
+                    <td>{{ notice.id }}</td><td>{{ notice.title }}</td><td>{{ notice.writer }}</td><td>{{ notice.pub_date }}</td>
+                </tr>
+            {% endfor %}
+        {% else %}
+        {% endif %}
         </tbody>        
       </table>
+        {% if not notice_list %}
+            <h3 class="text-center">no notice</h3>
+        {% endif %}
     </div>
 {% endblock content %}
